# simulators

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONFIG.md  Cargo.toml  NATIVE.md  NOTES.md  Pipfile  README.md  README.old.md  install-nvidia-container-toolkit.sh  setup.cfg  tasks.py
.github/workflows/: containers.yml  test.yml
analyze/: correl.stats.csv  get_hw_data.sh  per-app-stats.csv  sim_output.txt
analyze/multi2sim/: kpl-help.txt  vectorADD.txt
analyze/parsed/: bfs-rodinia-1080ti.csv  bfs-rodinia-1080ti.csv.cycle.0  bfs-rodinia-1080ti.csv.cycle.1  bfs-rodinia-gpgpusim.csv  m2s_vectorAdd.csv
benchmarks/: .gitignore  Makefile  README.md  benchmarks.yml  get-kernel-info.py  inject-main.py
benchmarks/BabelStream/: CUDAStream  Makefile  main.cpp
benchmarks/C00-BabelStream/: CUDAStream  CUDAStream.cu  Makefile
benchmarks/CUDA10-matrixMul/: Makefile
benchmarks/CUDA10-transpose/: Makefile
benchmarks/CUDA4-matrixMul/: Makefile  (+1 more)
docker/: .gitignore  tools.dockerfile
gpusims/: __init__.py  accelsim.py  accelsim_sass.py  bench.py  config.py  cuda.py  find_cuda.py  gpgpusim.py  gputejas.py  macsim.py  multi2sim.py  native.py  profile.py  run.py  tejas.py  utils.py
gputejas/: README.md
mgpusim-benches/: go.mod  go.sum  main.go
notebooks/: barplot.ipynb  barplot_old.ipynb  citation-counts.ipynb  hw_stats.py  load.py  notes.py  parse_hw_csv.ipynb  parsers.ipynb  plot.py  plot_correlation.ipynb  run-benches.ipynb  scatterplot.ipynb  subplot-test.ipynb
samples/: .gitignore
src/: fs.rs  lib.rs  read.rs
tests/: test_sanitize_input.py
(+5501 files in other folders)
