[package]
name = "gpgpusims"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hw-parse"
path = "tools/hw-parse/main.rs"

[[bin]]
name = "gpgpusim-parse"
path = "tools/gpgpusim-parse/main.rs"

[[bin]]
name = "tejas-parse"
path = "tools/tejas-parse/main.rs"

[[bin]]
name = "m2s-parse"
path = "tools/m2s-parse/main.rs"


[dependencies]
anyhow = "1"
lazy_static = "1"
chrono = "0.4"

# tools
clap = { version = "4.0", features = ["derive"] }

# parsing
regex = "1"
indicatif = "0"
rev_buf_reader = "0.3.0"
csv = "1"
rust-ini = "0"
serde = "1"

# containers
testcontainers-rs = "0"
tokio = { version = "1", features = [ "macros" ] }
async-trait = "0.1"

[dev-dependencies]
